--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div id="chat-list" class="flex-grow overflow-y-auto"></div>
             </div>
             <!-- Coluna da Janela de Chat -->
-            <main id="chat-window" class="w-full flex-1 flex-col h-full absolute md:static inset-0 z-0 hidden md:flex" style="background-image: url('https://i.pinimg.com/736x/8c/98/99/8c98994518b575bfd8c949e91d20548b.jpg'); background-size: contain;">
+            <div id="chat-window" class="w-full h-full flex-col absolute md:static inset-0 z-20 hidden md:flex" style="background-image: url('https://i.pinimg.com/736x/8c/98/99/8c98994518b575bfd8c949e91d20548b.jpg'); background-size: contain;">
                 <header id="chat-header" class="bg-white p-4 border-b border-gray-200 flex justify-between items-center flex-shrink-0">
                     <button id="back-to-chat-list-button" class="p-2 rounded-lg hover:bg-gray-200 md:hidden mr-2">
                         <svg class="w-6 h-6 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
@@ -176,7 +176,7 @@
                         </button>
                     </form>
                 </footer>
-            </main>
+            </div>
         </div>
     </div>
     
