--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
 
         // --- INÍCIO DO CÓDIGO JAVASCRIPT ---
 
+        // FIX: Updated Firebase config to match user's provided config
         const firebaseConfig = {
             apiKey: "AIzaSyB98-bStjweF82UALPiw2YiwKKn1IhZASE",
             authDomain: "videochamada11.firebaseapp.com",
             projectId: "videochamada11",
             storageBucket: "videochamada11.appspot.com",
             messagingSenderId: "872635256324",
-            appId: "1:872635256324:web:12a6051efe8796730f2f51",
-            databaseURL: "https://videochamada11-default-rtdb.firebaseio.com"
+            appId: "1:872635256324:web:12a6051efe8796730f2f51"
         };
 
         const app = initializeApp(firebaseConfig);
@@ -293,13 +293,20 @@
 
                 if (userDocSnap.exists()) {
                     state.userData = userDocSnap.data();
+                    // FIX: Check if older user profile needs to be updated for search
+                    if (!state.userData.username_lowercase) {
+                        state.userData.username_lowercase = state.userData.username.toLowerCase();
+                        await updateDoc(userDocRef, {
+                            username_lowercase: state.userData.username_lowercase
+                        });
+                    }
                 } else {
                     const newUsername = user.email.split('@')[0];
                     state.userData = { 
                         uid: user.uid, 
                         email: user.email, 
                         username: newUsername,
-                        username_lowercase: newUsername.toLowerCase() // FIX: Store lowercase username
+                        username_lowercase: newUsername.toLowerCase()
                     };
                     await setDoc(userDocRef, { ...state.userData, createdAt: serverTimestamp() });
                 }
@@ -507,7 +514,6 @@
             resultsContainer.innerHTML = '<p class="text-center">Procurando...</p>';
 
             try {
-                // FIX: Search against the lowercase field
                 const lowerCaseSearchTerm = searchTerm.toLowerCase();
                 const q = query(collection(db, "users"), 
                     where("username_lowercase", ">=", lowerCaseSearchTerm), 
